# graphql-orm-storage

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md
.agents/skills/graphql-orm-macros/: SKILL.md
docs/: README.md  agent-update.md  architecture.md  backup-integration.md  blob-store.md  development.md  digitise-extraction-notes.md  native-smb.md  plan.md  provider-roadmap.md  recording-streams.md  release-notes.md  streaming.md  usage.md
src/: azure.rs  backend.rs  blob.rs  checksum.rs  error.rs  key.rs  lib.rs  local.rs  object.rs  s3.rs  service.rs  smb.rs  streaming_object.rs
tests/: blob.rs  core.rs  local_blob.rs  local_round_trip.rs  local_streaming_object.rs  provider_placeholders.rs  s3_integration.rs  smb_integration.rs
tests/samba/: run.sh
