[package]
name = "graphql-orm-storage"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Dastari/graphql-orm-storage"
description = "Provider-neutral object storage primitives for graphql-orm applications"

[features]
default = ["local"]
local = ["dep:tokio"]
s3 = []
azure = []

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["fs"], optional = true }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

[[test]]
name = "local_round_trip"
path = "tests/local_round_trip.rs"
required-features = ["local"]
